styling.css
:root {
  font-family:"garamond", baskerville, "baskerville old face", "hoefler text", "times new roman", serif;
  font-size: 1.4em;
  line-height: 1.5em;
}

html* {
  box-sizing: border-box;
}
.main-nav ul {
  list-style-type: none;
  padding:.5em 0em .5em 0em;
  font-family: 'Quintessential', cursive;
  font-size: 1.2em;
  background-color: #00000064;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}
.main-nav a {
    color: #ffffff;
}
.account-nav ul {
  list-style-type: none;
  font-size: .6em;
  font-family: 'Quintessential', cursive;
  display:flex;
  flex-direction: row;
  justify-content:flex-end;
}
.login {
  margin: 0em .5em 0em .5em;
}
.account-nav a:link {
  color: #ffffff;
}
.account-nav a:visited {
  color: #ffffff;
}

.footer-nav ul {
  list-style-type: none;
  font-family: 'Quintessential', cursive;
  padding: 0;
  display:flex;
  flex-direction: row;
  justify-content: center;
  align-items: flex-end;
}
.contact {
  margin-left: .5em;
}
.footer-nav a:link {
  color: #000000;
}
.footer-nav a:visited {
  color: #000000;
}

.site-name {
  font-family:'Cinzel Decorative', cursive;
  font-size: 1.3em;
  color: #ffffff;
  display: flex;
  justify-content: center;
}
a:link {
  text-decoration: none;
}
.heading {
  font-family: "Cinzel Decorative", cursive;
  font-size: 1.1em;
  margin: 1.5em 0em 0em 0em;
  padding-left: .5em;
}
.main p {
  margin: 0 0 0 0;
  padding-left: .5em;
  padding-right: .5em;
}
.main h3, h4, h5 {
  font-family:'Quintessential', cursive;
}
.main h3 {
  padding-left: .5em;
  padding-right: .5em;
}
.main h4 {
  padding-left: 1em;
  padding-right: :1em;
}
.main h5 {
  padding-left: 2em;
  padding-right: 2em;
}
.contact {
  padding-left: 2em;
  padding-right: 2em;
}
.header {
  position: relative;
  background-image: url(Lilies.jpg);
  background-position: right;
  background-size: cover;
}

@media only screen and
(min-width: 850px) {
  .main p {
    max-width: 98%;
    font-size: 1.5em;
    line-height: 1.6em;
  }
  .main h2 {
    font-size: 1.6em;
  }
  .site-name {
    font-size: 1.9em;
  }
  .main-nav {
    font-size: 1.4em;
  }
}

